# ImprovedRag

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  launch_ui.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: app.yaml  eval.yaml  models.yaml  vector_store.faiss.yaml  vector_store.qdrant.yaml
data/db_snapshots/: README.md
data/eval/: questions_1000.jsonl  questions_20.jsonl  questions_200.jsonl
data/processed/: README.md
data/raw/: README.md
docker/: Dockerfile.api  Dockerfile.worker  entrypoint.sh
docs/: api.md  architecture.md  deployment.md  evaluation.md
models/: docker-compose.yml
results/: quick_test.json
results/checkpoint/ablation_study.json/: checkpoint_20251118_234031.json  checkpoint_20251119_002917.json  checkpoint_20251119_005840.json  checkpoint_20251122_203914.json  checkpoint_20251122_215400.json  checkpoint_20251122_220811.json  checkpoint_20251122_225412.json  checkpoint_20251122_232145.json  checkpoint_20251122_235043.json
scripts/: build_index.py  generate_questions.py  ingest_wiki.py  run_ablation_study.py  run_eval.py  serve_api.py
server/src/: main.py
src/ragx/: __init__.py  logging_config.py  settings.py
src/ragx/api/: __init__.py  dependencies.py  main.py  middleware.py  schemas.py
src/ragx/api/routers/: __init__.py  admin.py  analysis.py  chat.py  cove.py  eval.py  health.py  llm.py  query.py  search.py
src/ragx/api/schemas/: __init__.py  analysis.py  chat.py  cove.py  eval.py  llm.py  (+2 more)
src/ragx/cli/: __init__.py  main.py  utils.py
src/ragx/evaluation/: README.md  __init__.py  ablation_study.py  ablation_study_old.py  api_client.py  benchmark.py  checkpoint_manager.py  datasets.py  langchain_adapters.py  metrics.py  ragas_evaluator.py  ragas_runner.py  trulens_runner.py
src/ragx/generation/: __init__.py  inference.py  model.py
src/ragx/ingestion/: __init__.py  chunker.py  ingestion_pipeline.py  ingestion_progress.py  pipeline.py  quadrant_store.py  wiki_extractor.py
src/ragx/pipeline/: __init__.py  baseline.py  corag.py  enhanced.py  orchestrator.py
src/ragx/pipelines/: base.py  baseline.py  enhanced.py
src/ragx/retrieval/: __init__.py  embedder.py  indexer.py  reranker.py  schemas.py
src/ragx/ui/: README.md  __init__.py  chat_app.py  chat_app_old.py  helpers.py  types.py
src/ragx/utils/: __init__.py  config.py  logging_config.py  model_registry.py  settings.py  text.py  timing.py  types.py
src/ragx/verification/: __init__.py  cove.py  fact_checker.py  self_verify.py
tests/: __init__.py  conftest.py  test_api.py  test_evaluation_refactoring.py  test_ingestion.py  test_pipeline.py  test_prompting.py  test_reranker.py  test_retrieval.py  test_verification.py
(+97 files in other folders)
