[tool.uv]
index-url = "https://pypi.org/simple"

[project]
name = "ragx"
version = "0.1.0"
description = "RAG (Retrieval-Augmented Generation) system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "wikiextractor>=3.0.6",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.35.0",
    "torch",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.1",
    "nltk>=3.8",
    "tqdm>=4.65.0",
    "jinja2>=3.1.4",
    "numpy>=1.24.0",
    "requests>=2.32.0",
    "llama-index>=0.13.3",
    "torchvision",
    "torchaudio",
    "datasets>=4.0.0",
    "tokenizers>=0.21.4",
    "accelerate>=1.10.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "pylint>=3.3.8",
]
